画面実装サイド
左側実装

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,1 +1,19 @@
-アイウエオ
+.chat_space_message
+  %p チャットグループが作成されました。
+.chat_space
+  .left
+    .left_top
+      %p seo
+    %a{:href => ""}
+      .left_under
+        %p.left_under__title sample
+        %p.left_under__message Good bye world...
+    %a{:href => ""}
+      .left_under
+        %p.left_under__title sample
+        %p.left_under__message Good bye world...
+    %a{:href => ""}
+      .left_under
+        %p.left_under__title sample
+        %p.left_under__message Good bye world...
+  .right
