--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,19 +1,14 @@
-.chat_space_message
+.notification
   %p チャットグループが作成されました。
 .chat_space
-  .left
-    .left_top
-      %p seo
-    %a{:href => ""}
-      .left_under
-        %p.left_under__title sample
-        %p.left_under__message Good bye world...
-    %a{:href => ""}
-      .left_under
-        %p.left_under__title sample
-        %p.left_under__message Good bye world...
-    %a{:href => ""}
-      .left_under
-        %p.left_under__title sample
-        %p.left_under__message Good bye world...
+  .chat-side
+    .chat-side__user
+      %p.chat-side__user-name seo
+    .chat-side__groups
+      .chat-side__groups-list
+        %a{:href => ""}
+          .chat-side__group
+            %p.chat-side__group-name sample
+            %p.chat-side__group-message Good bye world...
+
   .right
