--- a/app/assets/stylesheets/_variable.scss
+++ b/app/assets/stylesheets/_variable.scss
@@ -1,14 +1,13 @@
-
-html,body,.chat_space,.left{
+html,body,.layout-notification,.chat{
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
-.notification p {
-  width: 100%;
-  background: #38aef0;
+.layout-notice {
   text-align: center;
   color: #fff;
+  background: #38AEF0;
 }
 
 .chat-side {
@@ -16,33 +15,59 @@ html,body,.chat_space,.left{
   min-height: 100%;
   background: #2f3e51;
   color: #fff;
+  float: left;
 }
 
-.chat-side__user {
-  height: 70px;
-  background: #253141;
-  padding: 35px 20px 0;
-}
-
-.lchat-side__user p {
+h5 {
   font-size: 16px;
   font-weight: bold;
-}
-
-.chat-side__groups {
-  padding: 20px;
-}
-
-.chat-side__groups-list a {
   color: #fff;
+}
+
+.chat-user {
+  height: 70px;
+  background: #253141;
+  padding-top: 35px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.chat-groups {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.chat-group__name {
+  padding-top: 35px;
+}
+
+.chat-main {
+  padding: 35px 40px 0 40px;
+  margin-left: 300px;
+  position: relative;
+}
+
+h2 {
+  font-size: 20px;
+  color: #333;
+}
+
+.chat-header__users {
+  font-size: 12px;
+  color: #999;
+}
+
+.chat-header--right {
+  position: absolute;
+  right: 40px;
+  top:28px;
+  border: 2px solid #38AEF0;
+  padding: 0 20px;
+  line-height: 40px;
+  font-size: 14px;
+}
+
+.chat-header--right a {
+  color: #38AEF0;
   text-decoration: none;
-}
-
-.chat-side__group-name {
-  font-size: 15px;
-  padding-bottom: 5px;
-}
-
-.chat-side__group-message {
-  font-size: 11px;
 }
