--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -124,41 +124,64 @@ legend {
 #yui3-css-stamp.cssreset {
   display: none; }
 
-html, body, .chat_space, .left {
+html, body, .layout-notification, .chat {
   height: 100%;
-  width: 100%; }
-
-.notification p {
   width: 100%;
-  background: #38aef0;
+  overflow: hidden; }
+
+.layout-notice {
   text-align: center;
-  color: #fff; }
+  color: #fff;
+  background: #38AEF0; }
 
 .chat-side {
   width: 300px;
   min-height: 100%;
   background: #2f3e51;
+  color: #fff;
+  float: left; }
+
+h5 {
+  font-size: 16px;
+  font-weight: bold;
   color: #fff; }
 
-.chat-side__user {
+.chat-user {
   height: 70px;
   background: #253141;
-  padding: 35px 20px 0; }
+  padding-top: 35px;
+  padding-left: 20px;
+  padding-right: 20px; }
 
-.lchat-side__user p {
-  font-size: 16px;
-  font-weight: bold; }
+.chat-groups {
+  padding-left: 20px;
+  padding-right: 20px; }
 
-.chat-side__groups {
-  padding: 20px; }
+.chat-group__name {
+  padding-top: 35px; }
 
-.chat-side__groups-list a {
-  color: #fff;
+.chat-main {
+  padding: 35px 40px 0 40px;
+  margin-left: 300px;
+  position: relative; }
+
+h2 {
+  font-size: 20px;
+  color: #333; }
+
+.chat-header__users {
+  font-size: 12px;
+  color: #999; }
+
+.chat-header--right {
+  position: absolute;
+  right: 40px;
+  top: 28px;
+  border: 2px solid #38AEF0;
+  padding: 0 20px;
+  line-height: 40px;
+  font-size: 14px; }
+
+.chat-header--right a {
+  color: #38AEF0;
   text-decoration: none; }
-
-.chat-side__group-name {
-  font-size: 15px;
-  padding-bottom: 5px; }
-
-.chat-side__group-message {
-  font-size: 11px; }
