--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,14 +1,24 @@
-.notification
-  %p チャットグループが作成されました。
-.chat_space
-  .chat-side
-    .chat-side__user
-      %p.chat-side__user-name seo
-    .chat-side__groups
-      .chat-side__groups-list
-        %a{:href => ""}
-          .chat-side__group
-            %p.chat-side__group-name sample
-            %p.chat-side__group-message Good bye world...
-
-  .right
+%p.layout-notice チャットグループが作成されました。
+.layout-notification
+  .chat
+    .chat-side
+      .chat-user.clearfix
+        %h5 seo
+        .chat-user__actions
+          %a.chat-user__action{:href => "#"}
+            %i.fa.fa-pencil-square-o
+          %a.chat-user__action{:href => "#"}
+            %i.fa.fa-cog
+      %ul.chat-groups
+        %li.chat-group
+          %a.chat-group__link{:href => "#"}
+            %p.chat-group__name sample
+            %p.chat-group__message Good bye world...
+    .chat-main
+      .chat-header.clearfix
+        .chat-header--left
+          %h2 sample
+          %p.chat-header__users Members:
+        .chat-header--right
+          %a.chat-header__edit-btn{:href => "#"} Edit
+      .chat-body
