--- a/app/assets/stylesheets/_variable.scss
+++ b/app/assets/stylesheets/_variable.scss
@@ -4,6 +4,16 @@ html,body,.layout-notification,.chat{
   overflow: hidden;
 }
 
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+a:hover{
+  color: #fff;
+  opacity: 0.6;
+}
+
 .layout-notice {
   text-align: center;
   color: #fff;
@@ -22,6 +32,7 @@ h5 {
   font-size: 16px;
   font-weight: bold;
   color: #fff;
+  float: left;
 }
 
 .chat-user {
@@ -30,6 +41,10 @@ h5 {
   padding-top: 35px;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+.chat-user__actions{
+  float: right;
 }
 
 .chat-groups {
@@ -97,7 +112,6 @@ h2 {
 
 .chat-footer {
   position: fixed;
-  width: 100%;
   bottom: 0;
   background: #aaa;
 }
@@ -106,6 +120,15 @@ h2 {
   padding: 20px 0;
 }
 
-.textarea {
-  height: 50px!important;
+#user_text {
+  height: 50px;
+  width: 100%;
+}
+
+.send {
+  background: #38AEF0;
+  color: #fff;
+  height: 50px;
+  width: 90px;
+  border: none;
 }
