--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,7 @@
 @import "./reset";
 @import "./variable";
 @import "font-awesome";
+@import "./user";
+// colors.scssとflash.scssをインポート
+@import "config/colors";
+@import "modules/flash";
