--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
-@import "./reset";
-@import "./variable";
+@import "config/reset";
+@import "config/variable";
 @import "font-awesome";
-@import "./user";
+@import "modules/user";
 // colors.scssとflash.scssをインポート
 @import "config/colors";
 @import "modules/flash";
